# RAG_IA_Agent_Portuguese_Opportunities

./: README.md  docker-compose.yml  dockerfile  jobs_and_news.db  main.py  pyproject.toml
src/: agent.py  api.py  indexer.py  migration.py
